--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/native-stack": "^6.9.23",
     "@reduxjs/toolkit": "^2.2.1",
-    "expo": "~50.0.11",
+    "expo": "^50.0.13",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-safe-area-context": "^4.8.2",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.29.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-wind": "^1.2.0",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
