--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.1.0",
+    "react-native-svg-transformer": "^1.3.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-wind": "^1.2.0",
     "react-redux": "^9.1.0",
