--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/native-stack": "^6.9.23",
     "@reduxjs/toolkit": "^2.2.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "expo": "^50.0.13",
+    "expo-checkbox": "~2.7.0",
     "expo-status-bar": "~1.11.1",
+    "final-form": "^4.20.10",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-final-form": "^6.5.9",
     "react-native": "0.73.4",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-document-picker": "^9.1.2",
     "react-native-gifted-charts": "^1.4.10",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.8.2",
@@ -32,7 +38,8 @@
     "react-native-wind": "^1.2.0",
     "react-redux": "^9.1.0",
     "realm": "^12.6.2",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
