--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/native-stack": "^6.9.23",
     "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "expo": "^50.0.13",
     "expo-checkbox": "~2.7.0",
+    "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.11.1",
     "final-form": "^4.20.10",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-final-form": "^6.5.9",
     "react-native": "0.73.4",
     "react-native-chart-kit": "^6.12.0",
@@ -35,6 +39,7 @@
     "react-native-svg": "^15.1.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-web": "~0.19.6",
     "react-native-wind": "^1.2.0",
     "react-redux": "^9.1.2",
     "realm": "^12.6.2",
