--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-web": "~0.19.6",
     "react-native-wind": "^1.2.0",
     "react-redux": "^9.1.2",
+    "react-select": "^5.8.0",
     "realm": "^12.6.2",
     "redux-thunk": "^3.1.0",
     "tailwind-merge": "^2.3.0"
